Add AllowedOrigins in properties file